some changes made