@@ -29,7 +29,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
+
 
 @Service
 public class AuctionService {
@@ -37,50 +37,55 @@ public class AuctionService {
     @PersistenceContext
     private EntityManager entityManager;
 
-    @Autowired
-    private AuctionRepository auctionRepository;
 
-    @Autowired
+    private AuctionRepository auctionRepository;
     private UserRepository userRepository;
 
-    @Autowired
-    @Qualifier("stringKafkaTemplate")
     private KafkaTemplate<String, String> kafkaTemplate;
-
-    @Value("${auction.kafka.topic.winner}")
     private  String WinnerLeaderboardTopic;
-
-    @Autowired
     private AuctionWinnerRepository auctionWinnerRepository;
-
-
-
-    @Autowired
-    private BookingRepository bookingRepository;
-
-    private static final Logger logger = Logger.getLogger(AuctionService.class.getName());
-    @Autowired
     private RedisService redisService;
-    @Autowired
     private BookingService bookingService;
-    @Autowired
     private WebSocketService webSocketService;
+    private BookingRepository bookingRepository;
+    private static final Logger logger = Logger.getLogger(AuctionService.class.getName());
 
-    public Long createAuction(CreateAuctionDTO Incomingauction) throws ResponseStatusException {
+
+    @Autowired
+    public AuctionService(AuctionRepository auctionRepository,
+                          UserRepository userRepository,
+                          @Qualifier("stringKafkaTemplate") KafkaTemplate<String, String> kafkaTemplate,
+                          AuctionWinnerRepository auctionWinnerRepository,
+                          RedisService redisService,
+                          BookingService bookingService,
+                          WebSocketService webSocketService,
+                          BookingRepository bookingRepository,
+                          @Value("${auction.kafka.topic.winner}") String winnerLeaderboardTopic) {
+        this.auctionRepository = auctionRepository;
+        this.userRepository = userRepository;
+        this.kafkaTemplate = kafkaTemplate;
+        this.WinnerLeaderboardTopic = winnerLeaderboardTopic;
+        this.auctionWinnerRepository = auctionWinnerRepository;
+        this.redisService = redisService;
+        this.bookingService = bookingService;
+        this.webSocketService = webSocketService;
+        this.bookingRepository = bookingRepository;
+    }
+
+
+    public Long createAuction(CreateAuctionDTO incomingAuction) throws ResponseStatusException {
         // Check if the bookingId is valid to be created as an auction
-        boolean isValid = true; // Here I will be calling a function with the bookingId
 
-        if (isValid) {
             // Create a new auction
             Auction auction = new Auction();
             auction.setStatus(AuctionStatus.PENDING);
             auction.setCreatedAt(LocalDateTime.now());
-            auction.setMin_Amount(Incomingauction.getMinAmount());
-            auction.setSeller(userRepository.findById(Incomingauction.getUserId()).orElse(null));
+            auction.setMin_Amount(incomingAuction.getMinAmount());
+            auction.setSeller(userRepository.findById(incomingAuction.getUserId()).orElse(null));
             // Set the end time to 1 hour from now
             auction.setEndsAt(LocalDateTime.now().plusSeconds(120)); //i have set this auction for 2 minutes
             // Set the booking ID
-            auction.setBookingId(bookingRepository.findById(Incomingauction.getBookingId()).orElse(null));
+            auction.setBookingId(bookingRepository.findById(incomingAuction.getBookingId()).orElse(null));
 
             // Save the auction to the database
             Auction savedAuction = auctionRepository.save(auction);
@@ -91,9 +96,7 @@ public class AuctionService {
             redisService.createLeaderboard(savedAuction.getId());
 
             return savedAuction.getId(); // Return the ID of the created auction
-        } else {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid booking ID for auction creation");
-        }
+
     }
 
 
@@ -107,11 +110,11 @@ public class AuctionService {
 
     @Transactional
     public void completeAuction(AuctionResultDTO result) {
-        System.out.println("Completing auction: " + result.getAuctionId());
+        logger.info("Completing auction: " + result.getAuctionId());
 
         Optional<Auction> auctionOpt = auctionRepository.findById(result.getAuctionId());
         if (auctionOpt.isEmpty()) {
-            System.out.println("Auction not found: " + result.getAuctionId());
+           logger.info("Auction not found: " + result.getAuctionId());
             return;
         }
 
@@ -128,15 +131,14 @@ public class AuctionService {
 
         auctionRepository.save(auction);
 
-//        System.out.println("Auction " +getAuctionId() + " marked as completed");
-        System.out.println("Auction " + result.getAuctionId() + " marked as completed");
+
+       logger.info("Auction " + result.getAuctionId() + " marked as completed");
 //        some operations are still left so need to configure that thing first
     }
 
 
 
     public List<PendingAuctionDTO> getPendingPayments(Long userId) {
-//        List<AuctionWinner> auctionWinners = auctionRepository.findPendingPaymentsByUserId(userId);
         Users user = userRepository.findById(userId).orElse(null);
         if(user==null){
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found");
@@ -165,7 +167,7 @@ public class AuctionService {
 
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String getTimeLeftStatus(Duration timeLeft) {
@@ -184,9 +186,7 @@ public class AuctionService {
         logger.info("Processing rejection for auction ID: " + auctionId);
 
         // Validate auction exists
-        Auction auction = auctionRepository.findById(auctionId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
-                        "Auction not found for ID: " + auctionId));
+
 
         try {
             // Prepare leaderboard key
